--- a/메르스 - 복사본/4.html
+++ b/메르스 - 복사본/4.html
@@ -1,8 +1,8 @@
 <!doctype html>
 <html>
 <head>
+ </title> <meta cherset="uft-8">
  <title>메르스에 감염될때</title>
- <meta cherset="uft-8">
 </head>
 <body>
  <body bgcolor="66ffff"<center><h1>메르스에 감염될때</h1></center>
