--- a/메르스 - 복사본/시작.html
+++ b/메르스 - 복사본/시작.html
@@ -4,12 +4,12 @@
  <meta cherset="uft-8">
  <title>mers</title>
 </head>
-<body bgcolor="ccff33">
+<body>
   <h1>중동호흡기증후군 메르스(Mers-Cov)</h1>
   <h3><strong>3년만에 나타난 중동호흡기증후군 메르스! 여기에서는 예방법,걸릴 시에 대처법에 대해 알으켜드립니다!</strong></h3>
   <ul>
-    <h2><b><li><a href="1.html">메르스 예방 방법</li></a></h2>
-    <h2><li><a href="4.html">메르스의 감염 될때</li></a></b></h2>
+   <li><a href="1.html">메르스 예방 방법</a><li>
+   <li><a href="4.html">메르스의 감염 될때</a></li>
   </ul>
  <image src="mers.jpg">
 </body>
