--- a/메르스 - 복사본/시작.html
+++ b/메르스 - 복사본/시작.html
@@ -11,6 +11,6 @@
    <li><a href="1.html">메르스 예방 방법</a><li>
    <li><a href="4.html">메르스의 감염 될때</a></li>
   </ul>
- <image src="mers.jpg">
+ <img src="mers.jpg">
 </body>
 </html>
