--- a/메르스 - 복사본/시작.html
+++ b/메르스 - 복사본/시작.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 <head>
- <meta cherset="uft-8">
+ <meta charset="uft-8">
  <title>mers</title>
 </head>
 <body>
@@ -11,6 +11,6 @@
    <li><a href="1.html">메르스 예방 방법</a><li>
    <li><a href="4.html">메르스의 감염 될때</a></li>
   </ul>
- <img src="mers.jpg">
+ <image src="mers.jpg">
 </body>
 </html>
